# bbot-naabu

./: .gitignore  README.md  naabu.py  pyproject.toml  test_naabu.py
docs/superpowers/specs/: 2026-05-04-naabu-module-design.md
