[project]
name = "bbot-naabu"
version = "0.1.0"
description = "BBOT scan module integrating Naabu port scanner"
requires-python = ">=3.10"
dependencies = [
    "bbot",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
